src/rules/snapshots/pg_migration_lint__rules__pgm003__tests__fk_no_index_fires.snap
---
source: src/rules/pgm003.rs
assertion_line: 192
expression: findings
---
- rule_id: PGM003
  severity: Major
  message: "Foreign key on 'child(pid)' has no covering index. Sequential scans on the referencing table during deletes/updates on the referenced table will cause performance issues."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
